# openGLstudy

./: CMakeLists.txt  CMakePresets.json  ObvCmakeFunctions.cmake  README.md  VersionInfoTemplate.rc
openGL/: CMakeLists.txt  Init.h  main.cpp  render.cpp  render.h
openGL/Data/: camera.h  mesh.h  model.h  shader.h  window.h
openGL/Shader/: fragShader.frag  fragmentShader.frag  vertexShader.vert
